--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -61,7 +61,7 @@
       "toc_window_display": false
     },
     "colab": {
-      "name": "Copy of FittingLineToGRBAfterglows_instructions.ipynb",
+      "name": "HW1.ipynb",
       "provenance": [],
       "collapsed_sections": [
         "acDR79PxLh0N"
@@ -77,7 +77,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Janina712/MLTSA22_JBoecher/blob/main/HW1_complete.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Janina712/MLTSA22_JBoecher/blob/main/HW1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -143,7 +143,7 @@
           "start_time": "2020-02-13T16:28:37.171220Z"
         },
         "id": "WtF-bBt3ZxLB",
-        "outputId": "a4ee41ec-3088-4e15-c057-8aea5df1ec2f",
+        "outputId": "37150860-e20c-4e2f-9d94-50a80c35d5cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -154,6 +154,7 @@
         "import numpy as np\n",
         "from scipy.optimize import minimize\n",
         "import matplotlib.pyplot as plt\n",
+        "import matplotlib.font_manager\n",
         "import seaborn as sns\n",
         "from sklearn.linear_model import LinearRegression\n",
         "\n",
@@ -197,7 +198,7 @@
           "start_time": "2020-02-13T16:28:37.974110Z"
         },
         "id": "TvYjmq0gZxLG",
-        "outputId": "9afe2fe3-2c30-41cc-b066-a7cf0465cf28",
+        "outputId": "31de8351-c7f4-40fd-f8b5-56c0e78350af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -214,7 +215,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-d1af1ad5-afa6-4dfb-8bc9-a0d705aada21\">\n",
+              "  <div id=\"df-96ab8d69-2cfa-4c31-85cd-06221490e305\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -285,7 +286,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d1af1ad5-afa6-4dfb-8bc9-a0d705aada21')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-96ab8d69-2cfa-4c31-85cd-06221490e305')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -336,12 +337,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d1af1ad5-afa6-4dfb-8bc9-a0d705aada21 button.colab-df-convert');\n",
+              "          document.querySelector('#df-96ab8d69-2cfa-4c31-85cd-06221490e305 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d1af1ad5-afa6-4dfb-8bc9-a0d705aada21');\n",
+              "          const element = document.querySelector('#df-96ab8d69-2cfa-4c31-85cd-06221490e305');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -399,7 +400,7 @@
           "start_time": "2020-02-13T16:28:37.998807Z"
         },
         "id": "5Y9ZIboFZxLK",
-        "outputId": "4c1bf11b-3630-4309-8111-a5869db9050d",
+        "outputId": "ecfc77ed-d310-416b-8f3a-5ac5423d3288",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -416,7 +417,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-7793ad4f-abd5-4c70-a1fe-300aff86440a\">\n",
+              "  <div id=\"df-d17f2072-bbb1-4166-9a60-7537d1fcf3ef\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -493,7 +494,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7793ad4f-abd5-4c70-a1fe-300aff86440a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d17f2072-bbb1-4166-9a60-7537d1fcf3ef')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -544,12 +545,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7793ad4f-abd5-4c70-a1fe-300aff86440a button.colab-df-convert');\n",
+              "          document.querySelector('#df-d17f2072-bbb1-4166-9a60-7537d1fcf3ef button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7793ad4f-abd5-4c70-a1fe-300aff86440a');\n",
+              "          const element = document.querySelector('#df-d17f2072-bbb1-4166-9a60-7537d1fcf3ef');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -621,10 +622,10 @@
           "start_time": "2020-02-13T16:28:38.013135Z"
         },
         "id": "8wkMliqUZxLN",
-        "outputId": "5a84baad-de79-46e6-b938-8f7504c12995",
+        "outputId": "a603a00f-808a-4415-a033-9f8c1a8cd4b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 656
+          "height": 638
         }
       },
       "source": [
@@ -652,25 +653,14 @@
         "pl.legend(grbAG[\"filter\"].unique(),  prop={\"size\":20})\n",
         "\n",
         "#Always rememebr you axis labels!!\n",
-        "pl.ylabel(\"magnitude\", fontsize=20)\n",
+        "pl.ylabel(\"magnitude\", fontsize=20);\n",
         "pl.xlabel(\"log time (sec after explosion)\", fontsize=20);\n",
-        "plt.xticks(fontsize=20)\n",
-        "plt.yticks(fontsize=20)\n",
+        "plt.xticks(fontsize=20);\n",
+        "plt.yticks(fontsize=20);\n",
         "\n"
       ],
       "execution_count": 5,
       "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(array([10., 12., 14., 16., 18., 20., 22., 24.]),\n",
-              " <a list of 8 Text major ticklabel objects>)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
-        },
         {
           "output_type": "stream",
           "name": "stderr",
@@ -748,7 +738,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 423
         },
-        "outputId": "fe8f4395-2ae4-45ad-dbba-c0c401241727"
+        "outputId": "280be143-3e22-4549-ed5f-203bb4eaf60e"
       },
       "execution_count": 6,
       "outputs": [
@@ -757,7 +747,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-10bd572c-1744-4ba5-9ec0-4c62f0358ff6\">\n",
+              "  <div id=\"df-d4983083-1ec1-4cd8-aae4-64376fbe52eb\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -889,7 +879,7 @@
               "</table>\n",
               "<p>108 rows × 6 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-10bd572c-1744-4ba5-9ec0-4c62f0358ff6')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d4983083-1ec1-4cd8-aae4-64376fbe52eb')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -940,12 +930,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-10bd572c-1744-4ba5-9ec0-4c62f0358ff6 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d4983083-1ec1-4cd8-aae4-64376fbe52eb button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-10bd572c-1744-4ba5-9ec0-4c62f0358ff6');\n",
+              "          const element = document.querySelector('#df-d4983083-1ec1-4cd8-aae4-64376fbe52eb');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -996,7 +986,7 @@
           "start_time": "2020-02-13T16:28:38.286493Z"
         },
         "id": "vOAycPfSZxLR",
-        "outputId": "c1f7b9dc-e4ba-435d-9eab-e9a2b7e81f75",
+        "outputId": "172f03a0-0e65-42b4-8fe3-fd57f9ea2074",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1035,7 +1025,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7542cdd3-67ba-4473-d007-7df919822481"
+        "outputId": "b78c2111-e778-4927-c39b-785b68ea642c"
       },
       "source": [
         "theta_best = np.linalg.inv(X.T.dot(X)).dot(X.T).dot(y)\n",
@@ -1090,7 +1080,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9832a030-f4ca-4d6d-d90c-3d2c32979321"
+        "outputId": "3e5e1860-9bcd-4aa7-8324-3860ca3e33b7"
       },
       "source": [
         "#sklearn is an object oriented package. You will call the function which will create a model (model selection) then fit it to the data separately (model fitting)\n",
@@ -1135,7 +1125,7 @@
           "start_time": "2020-02-13T16:28:39.096791Z"
         },
         "id": "40W-FTh3ZxLb",
-        "outputId": "cf6d66b1-e2ff-451a-d243-8b66c2505c29",
+        "outputId": "4a4b6b46-ca5c-4e9b-c063-5b39e32dc9bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1202,7 +1192,7 @@
           "start_time": "2020-02-13T16:28:39.108888Z"
         },
         "id": "yY_ST3NmZxLe",
-        "outputId": "dc1fe733-1876-44a4-a6ca-07755b7e07e4",
+        "outputId": "1e2afac0-40bd-4730-c191-ed14f6d4c09b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1280,7 +1270,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 620
         },
-        "outputId": "ea13e7b5-4309-47aa-e507-c3916d555f88"
+        "outputId": "518c13d5-44a1-4553-a30f-a6adc44da6d4"
       },
       "source": [
         "# include upper limits for plotting\n",
