--- a/HW2/HW2_JBoecher.ipynb
+++ b/HW2/HW2_JBoecher.ipynb
@@ -98,7 +98,7 @@
         "import pylab as pl\n",
         "%pylab inline"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
         "import json #reads and writes json files, see programmatic data access notebooks\n",
         "import os #this runs system level commands, see programmatic data access notebooks"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +152,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
       "source": [
         "pl.style.use(\"https://raw.githubusercontent.com/fedhere/MLTSA22_FBianco/master/fbb.mplstyle\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +207,7 @@
         "id": "Mux5tasfHeQp",
         "outputId": "4223209d-2c6d-4c34-91fc-6bbc8199b740"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,7 +230,7 @@
       "source": [
         "!pip install kaggle"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,7 +258,7 @@
         "!pwd\n",
         "\n",
         "# change current working directory\n",
-        "!cd /content/gdrive/MyDrive/MLTSA22/HW2/Data\n",
+        "%cd /content/gdrive/MyDrive/MLTSA22/HW2/Data\n",
         "\n",
         "!pwd"
       ],
@@ -269,7 +269,7 @@
         "id": "yB1SZlJiexeL",
         "outputId": "7427763d-328d-4fc2-9170-dcc40341992b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +289,7 @@
       "source": [
         "!ls /content/gdrive/MyDrive/MLTSA22/HW2/Data"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -305,7 +305,7 @@
         "id": "-i8OhcOFfnMb",
         "outputId": "11cff25c-bac2-43ff-e55a-5eb7e2be0185"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,7 +324,7 @@
       "metadata": {
         "id": "2WxTO5Lihri7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -349,7 +349,7 @@
         "id": "oJMeMEw0iz8b",
         "outputId": "cb7e0110-3106-46e3-a2b6-5b1b018fbc2b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,7 +366,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!kaggle datasets list -s stock"
+        "# !kaggle datasets list -s stock"
       ],
       "metadata": {
         "colab": {
@@ -375,7 +375,7 @@
         "id": "z7bdG4wknQ38",
         "outputId": "ad1e0e24-8dc0-40cd-adf9-503c43971716"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,7 +431,7 @@
         "id": "JpjiZMCjngDL",
         "outputId": "2a1894ca-41be-4cc7-83be-b19bb85dd533"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,7 +460,7 @@
         "id": "LRclWnRKosG1",
         "outputId": "65b2565f-a1de-4f30-903a-5ee10f9655d9"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,7 +484,7 @@
         "id": "NIZf77B3pdXX",
         "outputId": "23501981-fdbb-4ab5-908f-bb3f45182da7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -514,7 +514,7 @@
         },
         "outputId": "8ec1485a-6f16-4188-990b-8ed5c67434df"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,7 +568,7 @@
       "metadata": {
         "id": "MHHpn-qKs-Tv"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -582,7 +582,7 @@
       "metadata": {
         "id": "MEBT0J1xpowW"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -608,7 +608,7 @@
       "metadata": {
         "id": "30O51nrrKFu0"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -624,7 +624,7 @@
         "id": "IkNgkLFzpZoY",
         "outputId": "01c2dce3-c664-48e8-b843-f6105a6cd4f8"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -859,7 +859,7 @@
         "id": "qCYg8L70XnW3",
         "outputId": "64eaf3c8-07f1-43d9-ec3d-a8bfc6bd700a"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1093,7 +1093,7 @@
         "id": "nUT6R0vGXpI-",
         "outputId": "dc5b4b33-8eb3-4adc-ba4c-f3c05c65d714"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1115,7 +1115,7 @@
       "metadata": {
         "id": "fk5W6g73KXcc"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1139,7 +1139,7 @@
       "metadata": {
         "id": "5YattqdkYbdJ"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1154,7 +1154,7 @@
       "source": [
         "tss.iloc[0], tss.iloc[-1] "
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1213,7 +1213,7 @@
         "id": "mOoz80lqiLxF",
         "outputId": "7a130bce-9ec6-481e-f48b-075958eed9ca"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1370,7 +1370,7 @@
         "id": "OCJPtmHBUgeK",
         "outputId": "c948e0cf-c95d-469d-d056-2f8f261f425b"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1418,7 +1418,7 @@
         "print(\"Correlation matrix of 2015-2017 stock values\")\n",
         "tss.corr()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1718,7 +1718,7 @@
         "pl.xticks(range(len(tss.columns)), tss.columns, rotation=90)\n",
         "pl.yticks(range(len(tss.columns)), tss.columns);\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1792,7 +1792,7 @@
         "id": "Kk_o3G-VW6G8",
         "outputId": "c978d706-8395-4051-82c8-65b2528e800d"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
