--- a/HW9/HW9_JBoecher.ipynb
+++ b/HW9/HW9_JBoecher.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1c0-fGxqzHV4ps1DXETv62yy0AVuynZ4Y",
-      "authorship_tag": "ABX9TyPhXjiOWcMhXO4DIS0SPxvZ",
+      "authorship_tag": "ABX9TyOgToQwqq/FZNRzYgWn7OUu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1529,7 +1529,7 @@
       "metadata": {
         "id": "OwJehknreNo4"
       },
-      "execution_count": 297,
+      "execution_count": 339,
       "outputs": []
     },
     {
@@ -1543,9 +1543,9 @@
           "height": 424
         },
         "id": "ZVnfsJb8eRD4",
-        "outputId": "8ca63d10-2675-42a4-dcb9-de15c1e14378"
+        "outputId": "4d30be78-f69c-47d2-f83b-1ecb3800a62d"
       },
-      "execution_count": 298,
+      "execution_count": 340,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1594,7 +1594,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9c6a0167-70b2-4523-99f1-e397a82facb9\">\n",
+              "  <div id=\"df-bd23a73f-56b4-497f-aa5b-4eec2b886fb3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1906,7 +1906,7 @@
               "</table>\n",
               "<p>7848 rows × 202 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9c6a0167-70b2-4523-99f1-e397a82facb9')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bd23a73f-56b4-497f-aa5b-4eec2b886fb3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1957,12 +1957,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9c6a0167-70b2-4523-99f1-e397a82facb9 button.colab-df-convert');\n",
+              "          document.querySelector('#df-bd23a73f-56b4-497f-aa5b-4eec2b886fb3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9c6a0167-70b2-4523-99f1-e397a82facb9');\n",
+              "          const element = document.querySelector('#df-bd23a73f-56b4-497f-aa5b-4eec2b886fb3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1985,9 +1985,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 298
+          "execution_count": 340
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features.columns = features.columns.astype(str)"
+      ],
+      "metadata": {
+        "id": "v53FnaRwqtR6"
+      },
+      "execution_count": 373,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2182,6 +2193,160 @@
           },
           "metadata": {},
           "execution_count": 141
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "B. Classify"
+      ],
+      "metadata": {
+        "id": "WxF_hM0EkWnF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier"
+      ],
+      "metadata": {
+        "id": "eZpWy2qdkMVV"
+      },
+      "execution_count": 323,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#? RandomForestClassifier"
+      ],
+      "metadata": {
+        "id": "aqiFVLeflo4s"
+      },
+      "execution_count": 324,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clf = RandomForestClassifier(max_depth=2, random_state=0)"
+      ],
+      "metadata": {
+        "id": "Vs_8HQ7rl2ws"
+      },
+      "execution_count": 375,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train, x_test, y_train, y_test = train_test_split(features, df_obj.target.values, test_size=0.2)"
+      ],
+      "metadata": {
+        "id": "yxvdT0k7mgQE"
+      },
+      "execution_count": 376,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clf.fit(x_test, y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y77V93pfl-00",
+        "outputId": "22f20a72-baa7-4581-d42a-bef6e590b179"
+      },
+      "execution_count": 377,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(max_depth=2, random_state=0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 377
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(clf.predict(features))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rPDRP4wTm-8l",
+        "outputId": "26df2490-9679-4359-bd96-392b9ebe75b2"
+      },
+      "execution_count": 378,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[90 90 90 ... 90 90 90]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clf.score(x_train, y_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BlkJVu9ZnkiF",
+        "outputId": "c5971831-9bf0-4e79-9d14-039f8352c074"
+      },
+      "execution_count": 379,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.29133482000637145"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 379
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clf.score(x_test, y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TpbkOCsDq5LC",
+        "outputId": "b1a14efe-069e-4217-ac21-04d45fe980d4"
+      },
+      "execution_count": 381,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.30828025477707005"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 381
         }
       ]
     }
