--- a/HW9/HW9_JBoecher.ipynb
+++ b/HW9/HW9_JBoecher.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1c0-fGxqzHV4ps1DXETv62yy0AVuynZ4Y",
-      "authorship_tag": "ABX9TyNz93+pfGbrda4Sz16YvWxm",
+      "authorship_tag": "ABX9TyPxTJBLDKU2ZYv1+8PVT2vI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2291,6 +2291,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "My random forest categorization is not very good. It could probably be increased by changing the autoencoder architecture. I'm also not sure if combining the two sets of features in the way that I did is ideal. The features derived from the bottleneck are not meaningful in the same way that the mean, standard deviation, etc. are. Perhaps these types of features should be implemented separately. I might try to run the classification with only one set of features at a time."
+      ],
+      "metadata": {
+        "id": "w9olNN0Q8dRq"
+      }
     }
   ]
 }
