--- a/HW9/HW9_JBoecher.ipynb
+++ b/HW9/HW9_JBoecher.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1c0-fGxqzHV4ps1DXETv62yy0AVuynZ4Y",
-      "authorship_tag": "ABX9TyOCk1524Sylj9FRvXoFTxn/",
+      "authorship_tag": "ABX9TyOCjT9yzpKvpHxrwvVKE7tj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -899,7 +899,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Fig. 2. Original Time Series.** This plot shows the standardized flux values (connected) from object #5888, passband #1 (purple) of the original dataset. The data used here have been observed.  The curve exhibits a sinusoidal shape with smooth troughs at time stamps 34, 61, and 92 and peaks at time stamps 48 and 76. "
+        "**Fig. 2. Original Time Series.** This plot shows the standardized flux values (connected) from object #5888, passband #1 (purple) of the original dataset. The data used here have been observed.  The curve exhibits a sinusoidal shape with smooth troughs and peaks that decrease in frequency. "
       ],
       "metadata": {
         "id": "if9xuX435Mfq"
