--- a/HW9/HW9_JBoecher.ipynb
+++ b/HW9/HW9_JBoecher.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1c0-fGxqzHV4ps1DXETv62yy0AVuynZ4Y",
-      "authorship_tag": "ABX9TyOCjT9yzpKvpHxrwvVKE7tj",
+      "authorship_tag": "ABX9TyOtRDr4Q6+4qTA71Y4dKKPL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -831,7 +831,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Fig. 1. Loss Function.** The loss function is expected to quickly decline at the beginning and to flatten after a certain point. In this model, the loss function in both training and test set exhibit this pattern. Expectedly, the training loss function starts off at a higher loss value and declines more rapidly within the first two iterations.  The loss functions converge at epoch 2. After this point, the training loss function declines at an overall lower level than the test loss function."
+        "**Fig. 1. Loss Function.** The loss function computes the quantity that the model tries to minimize. It is expected to quickly decline at the beginning and to flatten after a certain point. In this model, the loss function in both training and test set exhibit this pattern. Expectedly, the training loss function starts off at a higher loss value and declines more rapidly within the first two iterations.  The loss functions converge at epoch 2. After this point, the training loss function declines at an overall lower level than the test loss function. Performance of the model looks roughly similar for training and test sets. However, the early convergence might be a sign of overfitting."
       ],
       "metadata": {
         "id": "2GsX2r9w34ct"
